# modernDreams

./: .gitignore  CLAUDE.md  CLAUDE.md.txt  Cargo.toml  README.md  README.md.txt  create-icons.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
crates/dreams-core/: Cargo.toml
crates/dreams-core/src/: claude.rs  db.rs  dreams.rs  error.rs  graph.rs  graph_analysis.py  lib.rs  models.rs  search.rs  tags.rs  theme.rs
crates/dreams-core/src/db/: migrations.rs
crates/dreams-ffi/: Cargo.toml
crates/dreams-ffi/include/: dreams_ffi.h
crates/dreams-ffi/src/: dispatch.rs  lib.rs
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
patches/: three-forcegraph+1.43.2.patch
public/: ARCHETYPES.md  GUIDE.md  SLEEP.md
src/: App.tsx
src-python/: GRAPHTHEORY.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: graph_analysis.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: claude.rs  clients.rs  dreams.rs  graph.rs  mod.rs  obsidian.rs  ocr.rs  search.rs  tags.rs  theme.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: ThemeProvider.tsx
src/components/calendar/: CalendarView.tsx
src/components/dreams/: DreamCard.tsx  DreamEditor.tsx  DreamList.tsx  DreamViewer.tsx  TagHighlightExtension.ts
src/components/graph/: GraphStats.tsx  GraphView.tsx
src/components/handwriting/: HandwritingPreview.tsx  HandwritingUpload.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/search/: SearchDialog.tsx
src/components/tags/: SplitTagDialog.tsx  TagApplyDialog.tsx  TagBadge.tsx  TagPicker.tsx
src/components/ui/: textarea.tsx
src/hooks/: useDreams.ts  useTags.ts
src/lib/: apiError.ts  tagUtils.ts  tauri.ts  utils.ts
src/pages/: AnalystPage.tsx  ArchetypesPage.tsx  CalendarPage.tsx  GraphPage.tsx  GuidePage.tsx  JournalPage.tsx  SeriesPage.tsx  SettingsPage.tsx  TagsPage.tsx  ThemeAnalysisPage.tsx
src/stores/: analystStore.ts  archetypeStore.ts  clientStore.ts  dreamStore.ts  seriesStore.ts  tagStore.ts  themeStore.ts  uiStore.ts
src/styles/: globals.css
