[package]
name = "dreams"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Dream Tracker Application"

[lib]
name = "dreams_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Platform-independent business logic. All DB / HTTP / graph code lives here
# so the same crate can be linked from the mobile FFI shim without pulling in
# any Tauri dependencies.
dreams-core = { path = "../crates/dreams-core" }

tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_Com",
] }

