[package]
name = "dreams-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "C ABI shim over dreams-core for iOS / Android / other non-Tauri hosts"

[lib]
name = "dreams_ffi"
# cdylib → shared library (.so / .dll / .dylib) for dynamic loading from
#          JNI / Dart FFI / Swift.
# staticlib → static archive (.a / .lib) for direct linkage into iOS app
#             binaries and for test harnesses that want symbol visibility.
crate-type = ["cdylib", "staticlib"]

[features]
# Mobile builds turn off the Python subprocess path. The pure-Rust graph
# construction is still exposed (through `build_graph_input_json`).
default = []
python-analysis = ["dreams-core/python-analysis"]

[dependencies]
dreams-core = { path = "../dreams-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
